// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignalrFacade used in NgModule should handle received messages: post-cleared 1`] = `
Object {
  "signalr": Object {
    "isConnected": false,
    "lastReceivedMessage": undefined,
    "receivedMessages": Array [],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle received messages: pre-clear 1`] = `
Object {
  "signalr": Object {
    "isConnected": false,
    "lastReceivedMessage": Object {
      "data": "😎",
      "methodName": "helloWorld",
    },
    "receivedMessages": Array [
      Object {
        "data": "😎",
        "methodName": "helloWorld",
      },
    ],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle reconnect 1`] = `
Object {
  "signalr": Object {
    "isConnected": true,
    "receivedMessages": Array [],
  },
}
`;
